--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,3 +85,4 @@ add_subdirectory(Config/Library)
 add_subdirectory(Config/GameTester)
 add_subdirectory(Config/Resources)
 add_subdirectory(Config/TicTacToe)
+add_subdirectory(Config/TitleWindowTester)
