--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,3 +87,4 @@ add_subdirectory(Config/GameTester)
 add_subdirectory(Config/Resources)
 add_subdirectory(Config/TicTacToe)
 add_subdirectory(Config/TitleWindowTester)
+add_subdirectory(Config/WinConditionWindowTester)
