feat: draw condition window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,3 +88,4 @@ add_subdirectory(Config/Resources)
 add_subdirectory(Config/TicTacToe)
 add_subdirectory(Config/TitleWindowTester)
 add_subdirectory(Config/WinConditionWindowTester)
+add_subdirectory(Config/DrawConditionWindowTester)
